tests/core/error/test.ontology
@prefix example: <http://example.com/> .
@prefix nrl: <http://tracker.api.gnome.org/ontology/v3/nrl#> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .

example: a nrl:Namespace ;
	nrl:prefix "example" .

example:A a rdfs:Class ;
	rdfs:subClassOf rdfs:Resource .

rdf:value a rdf:Property ;
	nrl:fulltextIndexed true ;
	rdfs:domain example:A ;
	rdfs:range xsd:string .

